--- a/app/partials/phone-home.html
+++ b/app/partials/phone-home.html
@@ -1,1 +1,5 @@
-<h1>Hello World!</h1>
+<div class="jumbotron">
+  <h1>Hello, world!</h1>
+  <p>This is Powerful Point!</p>
+  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+</div>
