--- a/app/css/app.css
+++ b/app/css/app.css
@@ -18,8 +18,8 @@ body {
 
 .phones li {
   clear: both;
-  height: 100px;
-  padding-top: 15px;
+  height: auto;
+  padding: 0 15px;
 }
 
 /** Detail View **/
