--- a/app/css/app.css
+++ b/app/css/app.css
@@ -46,10 +46,6 @@ ul.phone-thumbs li {
   background-color: white;
 }
 
-.login {
-  margin-top: 10px;
-}
-
 ul.phone-thumbs img {
   height: 100px;
   width: 100px;
@@ -85,4 +81,8 @@ ul.specs dt {
 
 h1 {
   border-bottom: 1px solid gray;
+}
+
+.search-btn {
+  margin-left: 15px;
 }
