Modified controller.js to create output for html content from the json file

--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,2 +1,4 @@
 <h2>{{chapter.title}}</h2><hr>
-<p>{{chapter.summary}}</p>
+<div ng-controller="PhoneDetailCtrl">
+ <p ng-bind-html="myHTML"></p>
+</div>
